# stache

./: .rustfmt.toml  Cargo.toml  README.md
.github/workflows/: rust.yml
src/: error.rs  lib.rs  main.rs  name.rs  path.rs  template.rs
src/ruby/: .output.rs.rustfmt  mod.rs  runtime.rs
tests/: runtime.rs  spec.rs
tests/fixtures/: bench-ruby  test-ruby  test-runtime.rb
tests/fixtures/benches/erb/fetch/: hash.erb  object.erb
tests/fixtures/benches/erb/flow/: conditional.erb  iterator.erb
tests/fixtures/benches/mustache/fetch/: hash.mustache  object.mustache
tests/fixtures/benches/mustache/flow/: conditional.mustache  iterator.mustache
tests/fixtures/templates/: escape.mustache  robot.mustache  robots.mustache
tests/fixtures/templates/includes/: header.mustache
tests/fixtures/templates/sections/: dot.mustache  true.mustache
tests/fixtures/templates/types/: array.mustache  boolean.mustache  class.mustache  float.mustache  nil.mustache  string.mustache  struct.mustache
